Fully functioning add manufacturer module

--- a/sbm-scripts/src/main/resources/myconfigs.properties
+++ b/sbm-scripts/src/main/resources/myconfigs.properties
@@ -6,6 +6,9 @@ site.browser=chrome
 site.user.email=karorimesh@gmail.com
 site.user.password=Data2020.
 
+site.user.email.checker=fridah.kanario@tracom.co.ke
+site.user.password.checker=Data2020.
+
 site.otp.uri=http://localhost:8080/selApi/getOTP
 
 site.landing.header.title=UNIFIED FLEET SOLUTION
