Statically generated files in local, make files dynamic

--- a/sbm-scripts/src/main/resources/myconfigs.properties
+++ b/sbm-scripts/src/main/resources/myconfigs.properties
@@ -14,3 +14,6 @@ site.otp.uri=http://localhost:8080/selApi/getOTP
 site.landing.header.title=UNIFIED FLEET SOLUTION
 
 site.driver=local
+
+test.output.report = /src/main/resources/templates/
+test.output.images = /src/main/resources/static/
